spacing fixes

--- a/express/code/blocks/discover-cards/discover-cards.css
+++ b/express/code/blocks/discover-cards/discover-cards.css
@@ -168,8 +168,6 @@ main .section .discover-cards {
 @media (min-width: 600px) {
   .discover-cards .center-title {
         font-size: var(--heading-font-size-m);
-        margin-top: 50px;
-        margin-bottom: 20px;
     }
     .discover-cards .cards-container .card {
         min-width: 399px;
@@ -233,6 +231,13 @@ main .section .discover-cards {
     .discover-cards .cards-container .card:first-child {
         margin-left: 100px;
     }
+}
+
+@media (min-width: 1200px) {
+  .discover-cards.flip {
+    height: 470px;
+    padding-bottom: var(--spacing-800);
+  }
 }
 
 .discover-cards .gallery,
